// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

const foo = 3;
const bar = foo!;
            ~~~~ This assertion is unnecessary since it does not change the type of the expression.
"
`;

exports[` 2`] = `
"Incorrect

const foo = <number>(3 + 5);
            ~~~~~~~~~~~~~~~ This assertion is unnecessary since it does not change the type of the expression.
"
`;

exports[` 3`] = `
"Incorrect

type Foo = number;
const foo = <Foo>(3 + 5);
            ~~~~~~~~~~~~ This assertion is unnecessary since it does not change the type of the expression.
"
`;

exports[` 4`] = `
"Incorrect

type Foo = number;
const foo = (3 + 5) as Foo;
            ~~~~~~~~~~~~~~ This assertion is unnecessary since it does not change the type of the expression.
"
`;

exports[` 5`] = `
"Incorrect

function foo(x: number): number {
  return x!; // unnecessary non-null
         ~~ This assertion is unnecessary since it does not change the type of the expression.
}
"
`;

exports[` 6`] = `
"Correct

const foo = <number>3;
"
`;

exports[` 7`] = `
"Correct

const foo = 3 as number;
"
`;

exports[` 8`] = `
"Correct

const foo = 'foo' as const;
"
`;

exports[` 9`] = `
"Correct

function foo(x: number | undefined): number {
  return x!;
}
"
`;

exports[` 10`] = `
"Options: { "typesToIgnore": ["Foo"] }

type Foo = 3;
const foo: Foo = 3;
"
`;
